# stm32_test

./: .gitignore  CMakeLists.txt
Inc/: main.h  stm32l4xx_hal_conf.h
Src/: main.c  stm32l4xx_hal_msp.c
Utilities/STM32L476G-Discovery/: stm32l476g_discovery_glass_lcd.c
perso/Inc/: accel_compass.h
perso/Src/: accel_compass.cpp
